Review access change
Change-Id: I395ded89d7666fc6cf17401f4156f4355d786f55

--- a/project.config
+++ b/project.config
@@ -14,4 +14,5 @@
 [access]
 	inheritFrom = Platform-Projects
 [access "refs/heads/upstream-master"]
+	createTag = group approvers-platform-libcore
 	createTag = group mdb/android-runtime
