Make external/bouncycastle behave like other external/ projects.
The intention of restrictive +2 appears to be to enforce OWNERS,
which is now present in the project so we can use OWNERS instead.

Change-Id: I7e86159f7496e6ce848b597ef9ed255e3b3a8796

--- a/project.config
+++ b/project.config
@@ -4,14 +4,5 @@
 	action = merge always
 	mergeContent = true
 [project]
-[access "refs/heads/*"]
-	label-Code-Review = -2..+2 group approvers-platform-external-bouncycastle
-	label-Code-Review = -2..+1 group Android Maintainers
-	label-Verified = -1..+0 group Android Maintainers
-[access "refs/heads/master"]
-	label-Verified = -1..+1 group Android Maintainers
-	submit = group Android Maintainers
 [access]
-	inheritFrom = Platform-Projects
-[access "refs/heads/upstream-master"]
-	createTag = group mdb/android-runtime
+	inheritFrom = Platform-Unrestricted-Projects
